--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,13 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    {% if email %}
+        {% if 'utoronto' in email %}
+            <h1>Your UofT email is {{ email }}.</h1>
+        {% else %}
+            <h1>Please use your UofT email.</h1>
+        {% endif %}
+    {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
