Modified index.html header to include a lab 3 welcome message

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    <h1>Hello, {% if name %}{{ name }}! Welcome to Lab 3 Docker!{% else %}Stranger! Welcome to Lab 3 Docker{% endif %}!</h1>
     {% if email %}
         {% if 'utoronto' in email %}
             <h1>Your UofT email is {{ email }}.</h1>
